--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
     <title>Dynamic Calendar</title>
+     <link rel="icon" type="image/png" href="fav.png">
     <style>
          :root {
             --green: #03dac6;
